--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       MYSQL_USER: dev
       MYSQL_PASSWORD: 123456
       MYSQL_DATABASE: devopstt
+    expose:
+      - 3306
 
   exec_ubuntu_container:
     container_name: exec_container
